--- a/src/app/components/therapy-chat-modal/therapy-chat-modal.component.scss
+++ b/src/app/components/therapy-chat-modal/therapy-chat-modal.component.scss
@@ -1,6 +1,7 @@
 .therapy-modal-header {
     ion-toolbar {
         --min-height: 48px;
+        padding-top: var(--safe-area-inset-top, env(safe-area-inset-top, 0px));
     }
 
     .close-btn {
